// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FullText /> should render a disabled fulltext filter 1`] = `
<div
  className="orizzonte__filter"
>
  <OrizzonteFilterInfo
    information={null}
  />
  <OrizzonteFilterCaption>
    Fulltext filter
  </OrizzonteFilterCaption>
  <input
    className="orizzonte__filter-fulltext orizzonte__filter-fulltext--disabled"
    disabled={true}
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    placeholder="This is a textarea placeholder..."
    type="text"
    value=""
  />
</div>
`;

exports[`<FullText /> should render a fulltext filter 1`] = `
<div
  className="orizzonte__filter"
>
  <OrizzonteFilterInfo
    information={null}
  />
  <OrizzonteFilterCaption>
    Fulltext filter
  </OrizzonteFilterCaption>
  <input
    className="orizzonte__filter-fulltext"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    placeholder="This is a textarea placeholder..."
    type="text"
    value="some keywords"
  />
</div>
`;

exports[`<FullText /> should render a fulltext filter with current value 1`] = `
<div
  className="orizzonte__filter"
>
  <OrizzonteFilterInfo
    information={null}
  />
  <OrizzonteFilterCaption>
    Fulltext filter
  </OrizzonteFilterCaption>
  <input
    className="orizzonte__filter-fulltext"
    disabled={false}
    onBlur={[Function]}
    onChange={[Function]}
    onKeyUp={[Function]}
    placeholder="This is a textarea placeholder..."
    type="text"
    value="Current textarea value"
  />
</div>
`;
